# serial_monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh_CN.md
source/: CMakeLists.txt  device_info.cc  device_info.h  display_window.cc  display_window.h  enum_device.cc  enum_device.h  main.cc  panel.cc  panel.h  serial_monitor_lib.cc  serial_monitor_lib.h  simple_notify_window.cc  simple_notify_window.h  utils.cc  utils.h
source/demo/: display_window.cc  display_window.h  main.cc  panel.cc  panel.h
source/lib/: device_changed.h  device_info.cc  device_info.h  enum_device.cc  enum_device.h  serial_monitor_lib.cc  serial_monitor_lib.h  serial_monitor_utils.cc  serial_monitor_utils.h  simple_notify_window.cc  simple_notify_window.h
test/: CMakeLists.txt  main_test.cc
